Fix overflow styling issues for channel bar and users bar

--- a/app/assets/stylesheets/channel_bar/channel_list.scss
+++ b/app/assets/stylesheets/channel_bar/channel_list.scss
@@ -1,5 +1,8 @@
 #channel-list-container {
+  height: calc(100% - 188px);
   overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: hidden;
   border-top: 1px solid rgba(142, 146, 151, 0.1);
   padding-left: 10px;
   padding-right: 10px;
