--- a/app/assets/stylesheets/main/main.scss
+++ b/app/assets/stylesheets/main/main.scss
@@ -22,6 +22,7 @@
 
 #channel-bar-container {
   width: 240px;
+  height: 100%;
   background-color: #2f3136;
   display: flex;
   flex-direction: column;
@@ -34,7 +35,7 @@
 }
 
 #channel-bar {
-  height: 100%;
+  height: calc(100% - 49px);
 }
 
 #user-name-button {
@@ -53,7 +54,7 @@
 #content-body-container {
   display: flex;
   flex-direction: row;
-  height: 100%;
+  height: calc(100% - 49px);
 }
 
 #header-bar {
@@ -85,6 +86,10 @@
 
 #users-bar {
   width: 240px;
+  height: calc(100% - 49px);
+  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: hidden;
   background-color: #2f3136;
 }
 
