--- a/app/assets/stylesheets/users_bar/users_bar.scss
+++ b/app/assets/stylesheets/users_bar/users_bar.scss
@@ -2,12 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 100%;
+  height: 100%;
 }
 
 #users-bar-user-list {
+  height: calc(100% - 35px);
   margin-top: 10px;
   overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 #users-bar-user-header {
